--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -11,6 +11,40 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.hero-image {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/images/background.jpg");
+  height: 50%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.hero-text {
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+}
+
+.hero-text button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 10px 25px;
+  color: black;
+  background-color: #ddd;
+  text-align: center;
+  cursor: pointer;
+}
+
+.hero-text button:hover {
+  background-color: #555;
+  color: white;
+}
+
 .container {
   position: absolute;
   margin: 20px;
@@ -35,7 +69,7 @@ div {text-align: center;}
 
 .topnav a {
   float: right;
-  color:  purple;
+  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -74,6 +108,7 @@ div {text-align: center;}
 
 <!----------------------------------------------------------------- hero html---------------------------------------------------------->
 
+<div class="hero-image">
   <div class="container">
     <div class="topnav">
       <a href="/blog">Professional</a>
@@ -84,26 +119,29 @@ div {text-align: center;}
     </div>
   </div>
   <div class="hero-text">
-    <h1 style="font-size:50px">Hisham Iqbal</h1>
-    <p>Just another mango man</p>
+    <h1 style="font-size:50px">Comparing Bush to Trump does not help anyone</h1>
+    <p>May 6 | Hisham Iqbal</p>
   </div>
   
+</div>
 
 <br>
 
-<h1 style="font-size:300%;">I am a Problem Solver.</h1>
 
 <p style="font-size:150%;"> 
-  The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
-  shared when there is a problem with a current system or where there is room for that system to improve. The advice that I often give 
-  is to myself in order to continuously improve my life. I also offer advice, often times to no avail, to others.
+  Earlier this week, George W. Bush, America’s 43rd Commander in Chief, 
+  released a video on Twitter to convey his feelings and offer advice to the greater U.S. 
+  population on the current COVID-19 outbreak. The video was released on Bush’s Presidential Center Twitter 
+  account and was 2 minutes and 47 seconds, consisting of a slideshow of photos and videos alongside Bush’s narration. 
+  The overall premise of the video, regardless of the intent behind the video, was to emphasize compassion and kindness during 
+  these difficult times. Bush described the sacrifice that medical and essential workers are undergoing to ensure that this deadly
+   virus does not continue its onslaught and how Americans should monitor social distancing guidelines at all times.
   <br>
-  <br>
-  <br>
-
-  This page will be used to update myself and the world about my life happenings. I hope to write frequently on this 
-  but alas, all wishes do not come true. I have a lot of interests, endeavors and passions that I hope to share through this platform so 
-  please join me on this ride!
+  The general conversation surrounding this video has been regarding George Bush himself and the contrast in how Donald Trump 
+  is handling this outbreak. Many people have found Bush’s video statement inspiring, a sign that this outbreak truly is non-partisan 
+  and impacts everyone. Others are using this video as a platform to further the attack against Trumps incompetence and lack of action 
+  against the Coronavirus outbreak. Although this video may look heartwarming on its surface, it is important to remember who the creator 
+  of this content is: George Bush.
 </p>
 
 
