--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -53,6 +53,9 @@ body, html {
 
 /*----------------------------------------------------------------- body css---------------------------------------------------------------*/
 
+.coverphoto {
+  width: 100%;
+}
 
 h1 {text-align: center; margin-right: 150px;
   margin-left: 150px;}
@@ -127,6 +130,9 @@ div {text-align: center;}
 
 <br>
 
+<!----------------------------------------------------------------- body html---------------------------------------------------------->
+
+<coverphoto src="https://miro.medium.com/max/1050/1*r_suW_7Z0ZMYv9TWxQrU2g.jpeg" alt="HTML5 Icon" width="128" height="128">
 
 <p style="font-size:150%;"> 
   Earlier this week, George W. Bush, America’s 43rd Commander in Chief, 
@@ -137,6 +143,7 @@ div {text-align: center;}
   these difficult times. Bush described the sacrifice that medical and essential workers are undergoing to ensure that this deadly
    virus does not continue its onslaught and how Americans should monitor social distancing guidelines at all times.
   <br>
+  <br>
   The general conversation surrounding this video has been regarding George Bush himself and the contrast in how Donald Trump 
   is handling this outbreak. Many people have found Bush’s video statement inspiring, a sign that this outbreak truly is non-partisan 
   and impacts everyone. Others are using this video as a platform to further the attack against Trumps incompetence and lack of action 
@@ -144,8 +151,21 @@ div {text-align: center;}
   of this content is: George Bush.
 </p>
 
+<p style="font-size:150%;"> 
+  Sure, the video that Bush posted is encouraging, heartfelt and any other adjective you may want to use to describe it. 
+  This is only the case if you choose to ignore the decades of wars, violence, animosity that has passed under Bush from the 
+  moment he reached public office. Ignoring all of his war crimes and inepitude to countless disasters, this video makes itself 
+  out to be a walk in the park. By taking this public service announcement at face value, you are doing a disservice to those 
+  who lost their lives in New Orleans, New York, the Middle East and countless other regions of the world in which Bush either 
+  interfered and created a conflict or his lack of intervention heightened a disaster.
+  <br>
+  <br>
+  It is almost sickening to be in a time period that glorifies someone because they are able to speak coherently. Especially 
+  someone who during his Presidential terms, was one of the most disliked presidents of all time.
+</p>
 
-<!----------------------------------------------------------------- hero html---------------------------------------------------------->
+
+<!----------------------------------------------------------------- footer html---------------------------------------------------------->
 
 
 <div class="footer">
