--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -135,7 +135,7 @@ div {text-align: center;}
 <coverphoto src="https://miro.medium.com/max/1050/1*r_suW_7Z0ZMYv9TWxQrU2g.jpeg" alt="HTML5 Icon" width="128" height="128">
 
 <p style="font-size:150%;"> 
-  Earlier this week, George W. Bush, America’s 43rd Commander in Chief, 
+  Earliers this week, George W. Bush, America’s 43rd Commander in Chief, 
   released a video on Twitter to convey his feelings and offer advice to the greater U.S. 
   population on the current COVID-19 outbreak. The video was released on Bush’s Presidential Center Twitter 
   account and was 2 minutes and 47 seconds, consisting of a slideshow of photos and videos alongside Bush’s narration. 
