--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -53,9 +53,13 @@ body, html {
 
 /*----------------------------------------------------------------- body css---------------------------------------------------------------*/
 
-.coverphoto {
-  width: 100%;
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
+
 
 h1 {text-align: center; margin-right: 150px;
   margin-left: 150px;}
@@ -132,7 +136,7 @@ div {text-align: center;}
 
 <!----------------------------------------------------------------- body html---------------------------------------------------------->
 
-<coverphoto src="https://miro.medium.com/max/1050/1*r_suW_7Z0ZMYv9TWxQrU2g.jpeg" alt="HTML5 Icon" width="128" height="128">
+<img src="https://miro.medium.com/max/1050/1*r_suW_7Z0ZMYv9TWxQrU2g.jpeg" alt="Simply Easy Learning" width="200" height="120">
 
 <p style="font-size:150%;"> 
   Earliers this week, George W. Bush, America’s 43rd Commander in Chief, 
