--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -137,6 +137,7 @@ div {text-align: center;}
 <!----------------------------------------------------------------- body html---------------------------------------------------------->
 
 <img src="https://miro.medium.com/max/1050/1*r_suW_7Z0ZMYv9TWxQrU2g.jpeg" alt="bushtrump" class="center" width="600" height="360">
+<figcaption>George W. Bush (43rd U.S. President) on the left. Donald J. Trump (45th U.S. President) on the right.</figcaption>
 
 <p style="font-size:150%;"> 
   Earliers this week, George W. Bush, America’s 43rd Commander in Chief, 
