--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -61,10 +61,9 @@ body, html {
 }
 
 
-h1 {text-align: center; margin-right: 150px;
-  margin-left: 150px;}
-p {text-align: center; margin-right: 150px;
-  margin-left: 150px;}
+h1 {text-align: center; margin-right: 300px;
+  margin-left: 300px;}
+
 div {text-align: center;}
 
 
@@ -139,14 +138,17 @@ div {text-align: center;}
 <img src="https://miro.medium.com/max/1050/1*r_suW_7Z0ZMYv9TWxQrU2g.jpeg" alt="bushtrump" class="center" width="600" height="360">
 <figcaption class="center">George W. Bush (43rd U.S. President) on the left. Donald J. Trump (45th U.S. President) on the right. </figcaption>
 
-<p style="font-size:150%;"> 
-  Earliers this week, George W. Bush, America’s 43rd Commander in Chief, 
+<p style="font-size:5" class = "center">Earliers this week, George W. Bush, America’s 43rd Commander in Chief, 
   released a video on Twitter to convey his feelings and offer advice to the greater U.S. 
   population on the current COVID-19 outbreak. The video was released on Bush’s Presidential Center Twitter 
   account and was 2 minutes and 47 seconds, consisting of a slideshow of photos and videos alongside Bush’s narration. 
   The overall premise of the video, regardless of the intent behind the video, was to emphasize compassion and kindness during 
   these difficult times. Bush described the sacrifice that medical and essential workers are undergoing to ensure that this deadly
    virus does not continue its onslaught and how Americans should monitor social distancing guidelines at all times.
+  </font-size>
+
+  
+  </p>
   <br>
   <br>
   The general conversation surrounding this video has been regarding George Bush himself and the contrast in how Donald Trump 
@@ -154,7 +156,7 @@ div {text-align: center;}
   and impacts everyone. Others are using this video as a platform to further the attack against Trumps incompetence and lack of action 
   against the Coronavirus outbreak. Although this video may look heartwarming on its surface, it is important to remember who the creator 
   of this content is: George Bush.
-</p>
+
 
 <p style="font-size:150%;"> 
   Sure, the video that Bush posted is encouraging, heartfelt and any other adjective you may want to use to describe it. 
