--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -61,9 +61,10 @@ body, html {
 }
 
 
-h1 {text-align: center; margin-right: 300px;
+h1 {text-align: center; margin-right: px;
   margin-left: 300px;}
-
+p {text-align: center; margin-right: 150px;
+  margin-left: 150px;}
 div {text-align: center;}
 
 
@@ -138,17 +139,20 @@ div {text-align: center;}
 <img src="https://miro.medium.com/max/1050/1*r_suW_7Z0ZMYv9TWxQrU2g.jpeg" alt="bushtrump" class="center" width="600" height="360">
 <figcaption class="center">George W. Bush (43rd U.S. President) on the left. Donald J. Trump (45th U.S. President) on the right. </figcaption>
 
-<p style="font-size:5" class = "center">Earliers this week, George W. Bush, America’s 43rd Commander in Chief, 
+
+<p style= "font-size:5;">Earliers this week, George W. Bush, America’s 43rd Commander in Chief, 
   released a video on Twitter to convey his feelings and offer advice to the greater U.S. 
   population on the current COVID-19 outbreak. The video was released on Bush’s Presidential Center Twitter 
   account and was 2 minutes and 47 seconds, consisting of a slideshow of photos and videos alongside Bush’s narration. 
   The overall premise of the video, regardless of the intent behind the video, was to emphasize compassion and kindness during 
   these difficult times. Bush described the sacrifice that medical and essential workers are undergoing to ensure that this deadly
    virus does not continue its onslaught and how Americans should monitor social distancing guidelines at all times.
-  </font-size>
+  </p>
 
+<p style="font-size:150%;"> 
   
   </p>
+
   <br>
   <br>
   The general conversation surrounding this video has been regarding George Bush himself and the contrast in how Donald Trump 
