--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -128,6 +128,10 @@ div {text-align: center;}
 <br>
 
 
+<img src="https://miro.medium.com/max/1400/1*r_suW_7Z0ZMYv9TWxQrU2g.jpeg" alt="bush_trump" width="600" height="400">
+<figcaption text-align: center;>George W. Bush (43rd U.S. President) on the left. Donald J. Trump (45th U.S. President) on the right.
+</figcaption>
+
 <p style="font-size:150%;"> 
   Earlier this week, George W. Bush, America’s 43rd Commander in Chief, 
   released a video on Twitter to convey his feelings and offer advice to the greater U.S. 
