--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -60,6 +60,13 @@ p {text-align: center; margin-right: 150px;
   margin-left: 150px;}
 div {text-align: center;}
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 
 /*----------------------------------------------------------------- top menu css---------------------------------------------------------------*/
 
@@ -128,7 +135,7 @@ div {text-align: center;}
 <br>
 
 
-<img class="center" src="https://miro.medium.com/max/1400/1*r_suW_7Z0ZMYv9TWxQrU2g.jpeg" alt="bush_trump" width="900" height="600">
+<img class="center" src="https://miro.medium.com/max/1400/1*r_suW_7Z0ZMYv9TWxQrU2g.jpeg" alt="bush_trump" width="700" height="400">
 <figcaption class="center">George W. Bush (43rd U.S. President) on the left. Donald J. Trump (45th U.S. President) on the right.
 </figcaption>
 
