--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -135,7 +135,7 @@ div {text-align: center;}
 <br>
 
 
-<img class="center" src="https://miro.medium.com/max/1400/1*r_suW_7Z0ZMYv9TWxQrU2g.jpeg" alt="bush_trump" width="700" height="400">
+<img class="center" src="https://miro.medium.com/max/1400/1*r_suW_7Z0ZMYv9TWxQrU2g.jpeg" alt="bush_trump" width="600" height="400">
 <figcaption class="center">George W. Bush (43rd U.S. President) on the left. Donald J. Trump (45th U.S. President) on the right.
 </figcaption>
 
@@ -147,8 +147,10 @@ div {text-align: center;}
   The overall premise of the video, regardless of the intent behind the video, was to emphasize compassion and kindness during 
   these difficult times. Bush described the sacrifice that medical and essential workers are undergoing to ensure that this deadly
    virus does not continue its onslaught and how Americans should monitor social distancing guidelines at all times.
+</p>
   <br>
   <br>
+<p style="font-size:150%;"> 
   The general conversation surrounding this video has been regarding George Bush himself and the contrast in how Donald Trump 
   is handling this outbreak. Many people have found Bush’s video statement inspiring, a sign that this outbreak truly is non-partisan 
   and impacts everyone. Others are using this video as a platform to further the attack against Trumps incompetence and lack of action 
