--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -148,8 +148,6 @@ div {text-align: center;}
   these difficult times. Bush described the sacrifice that medical and essential workers are undergoing to ensure that this deadly
    virus does not continue its onslaught and how Americans should monitor social distancing guidelines at all times.
 </p>
-  <br>
-  <br>
 <p style="font-size:150%;"> 
   The general conversation surrounding this video has been regarding George Bush himself and the contrast in how Donald Trump 
   is handling this outbreak. Many people have found Bush’s video statement inspiring, a sign that this outbreak truly is non-partisan 
@@ -158,6 +156,7 @@ div {text-align: center;}
   of this content is: George Bush.
 </p>
 
+<p><H3>Comparing what George Bush to Donald Trump does not make Bush better.</h3>
 <p style="font-size:150%;"> 
   Sure, the video that Bush posted is encouraging, heartfelt and any other adjective you may want to use to describe it. 
   This is only the case if you choose to ignore the decades of wars, violence, animosity that has passed under Bush from the 
@@ -165,10 +164,6 @@ div {text-align: center;}
   out to be a walk in the park. By taking this public service announcement at face value, you are doing a disservice to those 
   who lost their lives in New Orleans, New York, the Middle East and countless other regions of the world in which Bush either 
   interfered and created a conflict or his lack of intervention heightened a disaster.
-  <br>
-  <br>
-  It is almost sickening to be in a time period that glorifies someone because they are able to speak coherently. Especially 
-  someone who during his Presidential terms, was one of the most disliked presidents of all time.
 </p>
 
 
