--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -54,6 +54,8 @@ body, html {
 /*----------------------------------------------------------------- body css---------------------------------------------------------------*/
 
 
+H1 {text-align: center; margin-right: 150px;
+  margin-left: 150px;}
 h1 {text-align: center; margin-right: 150px;
   margin-left: 150px;}
 p {text-align: center; margin-right: 150px;
@@ -156,7 +158,7 @@ div {text-align: center;}
   of this content is: George Bush.
 </p>
 
-<p><H3>Comparing what George Bush to Donald Trump does not make Bush better.</h3>
+<p><H1>Comparing what George Bush to Donald Trump does not make Bush better.</h3>
 <p style="font-size:150%;"> 
   Sure, the video that Bush posted is encouraging, heartfelt and any other adjective you may want to use to describe it. 
   This is only the case if you choose to ignore the decades of wars, violence, animosity that has passed under Bush from the 
