--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -150,6 +150,14 @@ div {text-align: center;}
   these difficult times. Bush described the sacrifice that medical and essential workers are undergoing to ensure that this deadly
    virus does not continue its onslaught and how Americans should monitor social distancing guidelines at all times.
 </p>
+
+<blockquote class="twitter-tweet" tw-align-center><p lang="en" dir="ltr">A Message from President George W. Bush
+  <a href="https://twitter.com/TheCallToUnite?ref_src=twsrc%5Etfw">@TheCalltoUnite</a> 
+  <a href="https://t.co/FIn9wuOPTF">pic.twitter.com/FIn9wuOPTF</a></p>&mdash; George W. Bush Presidential Center 
+  (@TheBushCenter) <a href="https://twitter.com/TheBushCenter/status/1256607729151619073?ref_src=twsrc%5Etfw">May 2, 2020
+  </a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+
 <p style="font-size:150%;"> 
   The general conversation surrounding this video has been regarding George Bush himself and the contrast in how Donald Trump 
   is handling this outbreak. Many people have found Bush’s video statement inspiring, a sign that this outbreak truly is non-partisan 
