--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -151,7 +151,7 @@ div {text-align: center;}
    virus does not continue its onslaught and how Americans should monitor social distancing guidelines at all times.
 </p>
 
-<blockquote class="twitter-tweet" tw-align-center><p lang="en" dir="ltr">A Message from President George W. Bush
+<blockquote class = "center" class="twitter-tweet" tw-align-center><p lang="en" dir="ltr">A Message from President George W. Bush
   <a href="https://twitter.com/TheCallToUnite?ref_src=twsrc%5Etfw">@TheCalltoUnite</a> 
   <a href="https://t.co/FIn9wuOPTF">pic.twitter.com/FIn9wuOPTF</a></p>&mdash; George W. Bush Presidential Center 
   (@TheBushCenter) <a href="https://twitter.com/TheBushCenter/status/1256607729151619073?ref_src=twsrc%5Etfw">May 2, 2020
