--- a/uvaquarantine.html
+++ b/uvaquarantine.html
@@ -159,7 +159,7 @@ div {text-align: center;}
 
 
 <p style="font-size:150%;"> 
-  The general conversation surrounding this video has been regarding George Bush himself and the contrast in how Donald Trump 
+  The sgeneral conversation surrounding this video has been regarding George Bush himself and the contrast in how Donald Trump 
   is handling this outbreak. Many people have found Bush’s video statement inspiring, a sign that this outbreak truly is non-partisan 
   and impacts everyone. Others are using this video as a platform to further the attack against Trumps incompetence and lack of action 
   against the Coronavirus outbreak. Although this video may look heartwarming on its surface, it is important to remember who the creator 
