--- a/about.html
+++ b/about.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
+<title>Hisham Iqbal | About</title>
+  <!-- add icon link -->
+  <link rel = "icon" href =  "/images/icon.png" type = "image/x-icon">
 
 <style>
 body, html {
