--- a/experience.html
+++ b/experience.html
@@ -165,11 +165,11 @@ input[type=text] {
   margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
-  background: #ECEEEC;
+  background: black;
 }
 
 input[type=text]:focus, input[type=password]:focus {
-  background-color: #ECEEEC;
+  background-color: black;
   outline: none;
 }
 
@@ -295,7 +295,7 @@ button:hover {
 <div class="footer">
 
   <div class="row">
-    <div class="column" style="background-color:#ECEEEC;">
+    <div class="column" style="background-color:#057692;">
       <div class="container">
         <h1>Sign Up</h1>
         <p>Please fill in this form to create an account.</p>
@@ -310,7 +310,7 @@ button:hover {
         </div>
       </div>
     </div>
-    <div class="column" style="background-color:#ECEEEC;">
+    <div class="column" style="background-color:#057692;">
     
     </div>
   </div>
