--- a/experience.html
+++ b/experience.html
@@ -162,10 +162,10 @@ body, html {
 input[type=text] {
   width: 100%;
   padding: 15px;
-  margin: 5px 0 22px 0;
+  margin: 20px 0 22px 0;
   display: inline-block;
   border: none;
-  background: black;
+  background: whitesmoke;
 }
 
 input[type=text]:focus, input[type=password]:focus {
