--- a/experience.html
+++ b/experience.html
@@ -155,6 +155,8 @@ body, html {
 .column {
   flex: 50%;
   padding: 10px;
+  height: 400px; /* Should be removed. Only for demonstration */
+
 }
 
 
@@ -310,7 +312,7 @@ button:hover {
       </div>
 
     </div>
-    
+
   </div>
 
   <div class="column" style="background-color:#057692;">
