--- a/experience.html
+++ b/experience.html
@@ -294,28 +294,28 @@ button:hover {
 
 
 <div class="footer">
-</div>
+  <div class="row">
+    <div class="column";">
+      <div class="container">
+        <h1>Sign Up</h1>
+        <p>Please fill in this form to create an account.</p>
+        <hr>
 
-<div class="row">
-  <div class="column" style="background-color:#057692;">
-    <div class="container">
-      <h1>Sign Up</h1>
-      <p>Please fill in this form to create an account.</p>
-      <hr>
+        <label for="email"><b>Email</b></label>
+        <input type="text" placeholder="Enter Email" name="email" required>
 
-      <label for="email"><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
+      
+        <div class="clearfix">
+            <button type="submit" class="signupbtn">Sign Up</button>
+        </div>
 
-    
-      <div class="clearfix">
-          <button type="submit" class="signupbtn">Sign Up</button>
       </div>
 
     </div>
 
-  </div>
+    <div class="column";">
+    </div>
 
-  <div class="column" style="background-color:#057692;">
   </div>
 
   
