--- a/experience.html
+++ b/experience.html
@@ -138,7 +138,7 @@ body, html {
    left: 0;
    bottom: 0;
    width: 100%;
-   background-color: red;
+   background-color: burlywood;
    color: white;
    text-align: center;
 }
