--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ div {text-align: center;}
    left: 0;
    bottom: 0;
    width: 100%;
-   background-color: red;
+   background-color: lightskyblue;
    color: white;
    text-align: center;
 }
