--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@ div {text-align: center;}
    text-align: center;
 }
 
-.column {
+footer .column {
   float: left;
   width: 50%;
 }
 
 /* Clear floats after the columns */
-.row:after {
+footer .row:after {
   content: "";
   display: table;
   clear: both;
