--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Hisham Iqbal | Home</title>
   <!-- add icon link -->
   <link rel = "icon" href =  "/images/icon.png" type = "image/x-icon">
+
 <style>
 body, html {
   height: 100%;
@@ -131,8 +132,8 @@ footer .row:after {
     </div>
   </div>
   <div class="hero-text">
-    <h1 style="font-size:50px">Hisham Iqbal</h1>
-    <p>Just another mango man</p>
+    <h1 style="font-size:50px">Hello 👋! My name is Hisham Iqbal</h1>
+    <p>Welcome to my life, look around!</p>
   </div>
   
 </div>
