--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@ body, html {
 
 h1 {text-align: center; margin-right: 150px;
   margin-left: 150px;}
+h2 {text-align: center; margin-right: 150px;
+  margin-left: 150px;}
 p {text-align: center; margin-right: 150px;
   margin-left: 150px;}
 div {text-align: center;}
@@ -132,8 +134,9 @@ footer .row:after {
     </div>
   </div>
   <div class="hero-text">
-    <h1 style="font-size:50px">Hello 👋! My name is Hisham Iqbal</h1>
-    <p>Welcome to my life, look around!</p>
+    <h2 style="font-size:40px"> Hello 👋! </h2>
+    <h1 style="font-size:50px">My name is Hisham Iqbal</h1>
+    <p style="font-size:25px">Welcome to my life, look around!</p>
   </div>
   
 </div>
