--- a/index.html
+++ b/index.html
@@ -134,9 +134,7 @@ footer .row:after {
     </div>
   </div>
   <div class="hero-text">
-    <h2 style="font-size:40px"> Hello 👋! </h2>
-    <h1 style="font-size:50px">My name is Hisham Iqbal</h1>
-    <p style="font-size:25px">Welcome to my life, look around!</p>
+    <h1 style="font-size:50px">Welcome to my life 👋</h1>
   </div>
   
 </div>
