--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ body, html {
 /*----------------------------------------------------------------- body css---------------------------------------------------------------*/
 
 
-h1 {text-align: center; margin-right: 150px;
-  margin-left: 150px;}
+h1 {text-align: center; margin-right: 100px;
+  margin-left: 100px;}
 h2 {text-align: center; margin-right: 150px;
   margin-left: 150px;}
 p {text-align: center; margin-right: 150px;
@@ -134,7 +134,7 @@ footer .row:after {
     </div>
   </div>
   <div class="hero-text">
-    <h1 style="font-size:50px">Welcome to my life 👋</h1>
+    <h1 style="font-size:50px">Hey, I'm Hisham! 👋</h1>
   </div>
   
 </div>
