--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@ footer .row:after {
     </div>
   </div>
   <div class="hero-text">
-    <h1 style="font-size:50px">Hey, I'm Hisham! 👋</h1>
+    <h1 style="font-size:60px">Hey, I'm Hisham! 👋</h1>
   </div>
   
 </div>
 
 <br>
 
-<h1 style="font-size:300%;">I am a Problem Solver.</h1>
+<h1 style="font-size:50px">I am a Problem Solver.</h1>
 
 <p style="font-size:150%;"> 
   The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
