--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ footer .row:after {
 
 <br>
 
-<h1 style="font-size:50px">I am a Problem Solver.</h1>
+<h1 style="font-size:40px">I am a Problem Solver.</h1>
 
 <p style="font-size:150%;"> 
   The word consultant is defined as someone who provides expert advice. My life has been developed around this basic premise. Advice is
@@ -156,11 +156,15 @@ footer .row:after {
   please join me on this ride!
 </p>
 
+<!-- Calendly inline widget begin -->
+<div class="calendly-inline-widget" data-url="https://calendly.com/meetwithhisham" style="min-width:320px;height:630px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+<!-- Calendly inline widget end -->
+
 
 <!----------------------------------------------------------------- footer html---------------------------------------------------------->
 
 <div class="footer">
-  <div class="column">
     <p>
       <!-- Calendly link widget begin -->
       <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
@@ -169,7 +173,6 @@ footer .row:after {
       <!-- Calendly link widget end -->
     </p>
   </div>
-  <div class="column">
 
   </div>
 </div>
