--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ footer .row:after {
 </p>
 
 
-<h1 style="font-size:40px">Chat with me</h1>
+<p style="font-size:40px">Chat with me</p>
 
 <!-- Calendly inline widget begin -->
 <div class="calendly-inline-widget" data-url="https://calendly.com/meetwithhisham" style="min-width:320px;height:630px;"></div>
