--- a/about.html
+++ b/about.html
@@ -108,13 +108,41 @@ body, html {
     </div>
   </div>
   <div class="hero-text">
-    <h1 style="font-size:60px">About Me</h1>
+    <h1 style="font-size:50px">Hisham Iqbal</h1>
+    <p>Welcome to my story</p>
   </div>
   
 </div>
 
 
 
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
+
+<p>Page Content..</p>
 
 <!----------------------------------------------------------------- hero html---------------------------------------------------------->
 
