--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@ body, html {
 }
 
 .topnav a {
-  float: left;
+  float: right;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -115,34 +115,6 @@ body, html {
 </div>
 
 
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
-
-<p>Page Content..</p>
 
 <!----------------------------------------------------------------- hero html---------------------------------------------------------->
 
